fix(KSTIP-2152): some improvements